test/libsolidity/syntaxTests/errors/panic_reserved_name.sol
// TODO: What if an error is imported and alias as Panic?
// TODO I Think the best way would be to have Error in the global scope.
error Panic(bytes2);
// ----
